--- a/components/Background/Background.module.css
+++ b/components/Background/Background.module.css
@@ -1,8 +1,8 @@
 .container {
   align-items: center;
-  background-image: url('../../public/icons/bg.svg');
+  background-image: url('../../public/img/bg-pic.png');
+  background-repeat: repeat;
   display: flex;
   flex-direction: column;
-  height: 3508px;
   width: 100%;
 }
