--- a/components/Collection/Collection.module.css
+++ b/components/Collection/Collection.module.css
@@ -50,7 +50,7 @@
   align-items: center;
   justify-content: center;
   color: white;
-  width: 300px;
+  width: 22%;
   height: 347px;
   background: #472d77;
   border-radius: 27px;
