--- a/components/Collection/Collection.module.css
+++ b/components/Collection/Collection.module.css
@@ -5,10 +5,6 @@
   width: 100%;
 }
 
-.top-waves {
-  width: 100%;
-}
-
 .magenta {
   background: #ec408b;
   display: flex;
@@ -18,48 +14,105 @@
 
 .wolfi-collection {
   display: flex;
-  width: 100%%;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
 
 .desc-collection {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
 
 .desc-collection p {
-  width: 600px;
+  color: white;
+  width: 300px;
+  text-align: center;
+  align-self: center;
 }
 
 .wolfi-benefits {
   display: flex;
   flex-direction: column;
-  justify-content: cente;
-  align-items: center;
-  width: 100%;
-}
-.card-group {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 90%;
 }
 
+.card-group{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+   
+}
 .card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
-  width: 22%;
+  max-width: 320px;
   height: 347px;
   background: #472d77;
   border-radius: 27px;
+  margin-bottom: 20px;
 }
 
-.card p {
-  width: 90%;
+.card p{
+   width: 90%;
+   margin: 0;
+}
+
+.top-waves {
+  width: 100%;
 }
 
 .down-waves {
   transform: rotate(-180deg);
+}
+
+@media (min-width: 990px) {
+  
+  .wolfi-collection {
+    flex-direction: row;
+    width: 90%;
+  }
+
+  .desc-collection p {
+    width: 572px;
+    align-self: unset;
+    align-self: center;
+  }
+
+  .wolfi-benefits {
+    display: flex;
+    flex-direction: column;
+    justify-content: cente;
+    align-items: center;
+    width: 100%;
+  }
+  .card-group {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    width: 22%;
+    height: 347px;
+    background: #472d77;
+    border-radius: 27px;
+  }
+
+  .card p {
+    width: 90%;
+  }
+
+  
 }
