--- a/components/WalletSection/WalletSection.module.css
+++ b/components/WalletSection/WalletSection.module.css
@@ -1,3 +1,11 @@
 .container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media(min-width:990px){
+   .container{
+     flex-direction: row;
+   }
 }
