--- a/components/ConnectWallet/ConnectWallet.module.css
+++ b/components/ConnectWallet/ConnectWallet.module.css
@@ -1,42 +1,65 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.logotype-desc{
+.logotype-desc {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
 .logotype-desc p {
-    width: 167px;
-    font-size: 16px;
-    text-align: justify;
-    color: white;
-    margin: 0;
+  width: 167px;
+  font-size: 16px;
+  text-align: justify;
+  color: white;
+  margin: 0;
 }
 
-.min-max{
-
-     background-color: white;
-     border-radius: 10px;
-     padding: 16px;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
+.min-max {
+  background-color: white;
+  border-radius: 10px;
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
 }
 
-.min-max img {
-     cursor: pointer;
+.cost {
+  display: flex;
+  flex-direction: column;
+
+  color: white;
+  padding-top: 12px;
+  border-top: 2px solid black;
 }
 
-.cost{
-    
+@media (min-width: 990px) {
+  .logotype-desc {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .min-max {
+    background-color: white;
+    border-radius: 10px;
+    padding: 16px;
     display: flex;
     justify-content: space-between;
-    color: white ;
-    padding-top: 12px;
-    border-top: 2px solid black;
+    align-items: center;
+  }
 
+  .min-max img {
+    cursor: pointer;
+  }
+
+  .cost {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
