--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,14 +1,16 @@
 .container{
-     height: 211px;
-     background-color: #1E0045;
-     display: flex;
-     justify-content: center;
-     align-items: center;
+    
+    background-color: #1E0045;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 320px;
 }
 
 .nav-footer{
-    width: 80%;
+    width: 95%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
@@ -17,14 +19,50 @@
     display: flex;
     flex-direction: column;
     color: white;
+    margin-bottom: 20px;
 }
 
 .nav {
     color: white;
-    text-transform: uppercase;
-
-    width: 25%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
+    text-transform: uppercase;
+    width: 100%;
+    height: 140px;
+    justify-content:space-around  ;
 }
 
+
+@media(min-width:990px){
+
+    .container{
+        height: 211px;
+        flex-direction: row;
+        background-color: #1E0045;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: unset;
+    }
+   
+   .nav-footer{
+       width: 80%;
+       display: flex;
+       flex-direction: row;
+       justify-content: space-between;
+       align-items: center;
+   }
+   
+   
+   .nav {
+       color: white;
+       text-transform: uppercase;
+   
+       width: 25%;
+       display: flex;
+       justify-content: space-between;
+   }
+   
+   
+}
