--- a/components/Welcome/Welcome.module.css
+++ b/components/Welcome/Welcome.module.css
@@ -2,9 +2,11 @@
   height: 474px;
   width: 100%;
   background-image: url("../../public/img/hero-sm.svg"),
-    url("../../public/img/banner1.svg");
-  background-position: center;
+    url("../../public/img/banner1.svg") ;
+  background-position: center center;
   background-position: center bottom;
+  
+
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
