--- a/components/AboutMe/AboutMe.module.css
+++ b/components/AboutMe/AboutMe.module.css
@@ -29,7 +29,7 @@
 }
 
 .rectangle{
-  width:320px;
+ width: 100%;
   height:160px;
   background-color: black;
 
@@ -44,7 +44,7 @@
 
 .separator{width: 70%; display: flex; justify-content: center;}
 
-@media (min-width: 620px) {
+@media (min-width: 620px ) {
   .frame-sm {
     display: none !important;
   }
@@ -53,8 +53,22 @@
     display: block !important;
   }
 
+  .rectangle{
+    width:500px;
+    height: 320px;
+ }
+ 
+ .about-me-text{
+  width: 500px;
+ }
+
+ .about-me-text-2{
+  width: 500px;
+ }
  
 }
+
+
 
 @media (min-width: 990px) {
   .about-me {
@@ -75,11 +89,22 @@
     width: 954px;
     height: 727px;
     justify-content: center;
-    align-items: flex-end;
-    padding-right: 138px;
+    align-items: center;
+    position: relative;
     
   
    }
+
+    .video{
+      height:61%;
+     
+      width: 82%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-end;
+   }
+
+   .video:focus { outline:none; }
 
   .rectangle{
      display: none;
