--- a/components/Collection/Collection.module.css
+++ b/components/Collection/Collection.module.css
@@ -53,10 +53,10 @@
    
 }
 .card {
-  display: flex;
+  display: flex !important;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   color: white;
   max-width: 320px;
   height: 347px;
@@ -65,9 +65,14 @@
   margin-bottom: 20px;
 }
 
+.card-img{
+    
+}
+
 .card p{
    width: 90%;
    margin: 0;
+   text-align: center;
 }
 
 .top-waves {
@@ -114,7 +119,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+   
     color: white;
     width: 22%;
     height: 347px;
