--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,8 +1,12 @@
 .container{
-
   display: none;
 }
 
+
+.connect-btn{
+  background: transparent;
+  border: none;
+}
 
 @media(min-width:990px){
 
