--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: fjallaone-regular;
+  src: url(/fonts/FjallaOne-Regular.ttf);
+}
+
 html,
 body {
   padding: 0;
@@ -13,4 +18,5 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: 'fjallaone-regular';
 }
