--- a/components/AboutMe/AboutMe.module.css
+++ b/components/AboutMe/AboutMe.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'Inter', sans-serif;
 }
 
 .header {
@@ -118,10 +119,15 @@
 
 @media (min-width: 1200px) {
 
-  .about-me{
-    width: 78%;
+  .about-me {
+    
+    width: 1024px;
+   
   }
+  
   .about-me-text {
     width: 658px;
   }
 }
+
+
