--- a/components/Collection/Collection.module.css
+++ b/components/Collection/Collection.module.css
@@ -38,6 +38,7 @@
   width: 300px;
   text-align: center;
   align-self: center;
+  font-family: 'Inter', sans-serif;
 }
 
 .wolfi-benefits {
@@ -58,21 +59,20 @@
   align-items: center;
   justify-content: space-around;
   color: white;
-  max-width: 320px;
+  max-width: 269px;
   height: 347px;
   background: #472d77;
   border-radius: 27px;
   margin-bottom: 20px;
+  font-family: 'Inter', sans-serif;
 }
 
-.card-img{
-    
-}
 
 .card p{
    width: 90%;
    margin: 0;
    text-align: center;
+   height: 140px;
 }
 
 .top-waves {
@@ -111,8 +111,8 @@
   .card-group {
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    width: 90%;
+    justify-content: space-around;
+    width: 100%;
   }
 
   .card {
@@ -132,4 +132,17 @@
   }
 
   
+}
+
+@media(min-width:1100px){
+
+   .wolfi-collection{
+     width: 1026px;
+   }
+}
+
+@media(min-width:1260px){
+    .card-group{
+        width: 1220px;
+    }
 }
