--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -12,13 +12,13 @@
     display: flex;
     justify-content: center;
     position: relative;
+    font-family: 'Fjalla One', sans-serif;
     
   }
 
  
   
   .nav {
-    min-height: 118px;
     width: 85%;
     display: flex;
     justify-content: space-between;
@@ -35,8 +35,10 @@
   }
   
   .nav-options a{
-    color: white;
+    color: white !important;
     text-transform: uppercase;
+    text-decoration: none !important;
+    font-size: 22px;
   }
   
   .social-links {
