--- a/components/AboutMe/AboutMe.module.css
+++ b/components/AboutMe/AboutMe.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .header {
@@ -14,10 +14,9 @@
   padding-bottom: 70px;
 }
 
-.tv{
-   display: none;
+.tv {
+  display: none;
 }
-
 
 .about-me {
   display: flex;
@@ -29,23 +28,27 @@
   display: none !important;
 }
 
-.rectangle{
- width: 100%;
-  height:160px;
+.rectangle {
+  width: 100%;
+  height: 160px;
   background-color: black;
-
 }
 
-.about-me-text,.about-me-text-2{
+.about-me-text,
+.about-me-text-2 {
   width: 290px;
   color: white;
   align-self: center;
   font-size: 16px;
 }
 
-.separator{width: 70%; display: flex; justify-content: center;}
+.separator {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+}
 
-@media (min-width: 620px ) {
+@media (min-width: 620px) {
   .frame-sm {
     display: none !important;
   }
@@ -54,22 +57,19 @@
     display: block !important;
   }
 
-  .rectangle{
-    width:500px;
+  .rectangle {
+    width: 500px;
     height: 320px;
- }
- 
- .about-me-text{
-  width: 500px;
- }
+  }
 
- .about-me-text-2{
-  width: 500px;
- }
- 
+  .about-me-text {
+    width: 500px;
+  }
+
+  .about-me-text-2 {
+    width: 500px;
+  }
 }
-
-
 
 @media (min-width: 990px) {
   .about-me {
@@ -84,50 +84,46 @@
     text-align: left;
   }
 
-  .tv{
+  .tv {
     display: flex;
-    background-image: url('../../public/icons/Group.svg');
+    background-image: url("../../public/icons/Group.svg");
     width: 954px;
     height: 727px;
     justify-content: center;
     align-items: center;
     position: relative;
-    
-  
-   }
+  }
 
-    .video{
-      height:61%;
-     
-      width: 82%;
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-end;
-   }
+  .video {
+    height: 61%;
+    width: 81.7%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+  }
 
-   .video:focus { outline:none; }
+  .video video {
+    width: 642px;
+  }
 
-  .rectangle{
-     display: none;
+  .video:focus {
+    outline: none;
+  }
+
+  .rectangle {
+    display: none;
   }
   .about-me-text-2 {
-    display:none;
-   }
-
-
+    display: none;
+  }
 }
 
 @media (min-width: 1200px) {
-
   .about-me {
-    
     width: 1024px;
-   
   }
-  
+
   .about-me-text {
     width: 658px;
   }
 }
-
-
