--- a/components/Welcome/Welcome.module.css
+++ b/components/Welcome/Welcome.module.css
@@ -1,23 +1,25 @@
 .container {
-  height: 474px;
+  height: 370px;
   width: 100%;
-  background-image: url("../../public/img/hero-sm.svg"),
-    url("../../public/img/banner1.svg") ;
-  background-position: center center;
-  background-position: center bottom;
-  
+  background: url("../../public/img/hero-sm.svg") center bottom ,
+    url("../../public/img/banner-sm.svg") center ;
 
+  
   background-repeat: no-repeat;
+  background-size: unset;
+
   display: flex;
   justify-content: center;
 }
+
+
 
 .welcome{
   width: 100%;
 }
 
 .right-box {
-  background-image: url("../../public/icons/logo big 1.svg");
+  background-image: url("../../public/img/Logo-sm.svg");
   background-position: center center;
   background-repeat: no-repeat;
   display: flex;
@@ -35,23 +37,47 @@
   text-transform: uppercase;
 }
 
-@media (min-width: 990px) {
+.mint-now{
+   display: none;
+}
+
+@media(min-width:429px){
+
   .container {
     height: 474px;
-    background-image: url("../../public/icons/hero 1.svg"),
+    background-image: url("../../public/img/hero-sm.svg"),
       url("../../public/img/banner1.svg");
     background-position: center;
     background-position: center bottom;
     background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-  }
+   
+  } 
+}
 
+@media (min-width: 990px) {
+ 
+  .container {
+    height: 474px;
+    background-image: url("../../public/icons/hero\ 1.svg"),
+      url("../../public/img/banner1.svg");
+    background-position: center;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+   
+  } 
   .welcome {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: space-between;
+  }
+
+  .mint-now-sm{
+     display: none;
+  }
+
+  .mint-now{
+     display: unset;
   }
 
   .left-box {
@@ -85,5 +111,6 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    
   }
 }
