--- a/components/Welcome/Welcome.module.css
+++ b/components/Welcome/Welcome.module.css
@@ -12,7 +12,9 @@
   justify-content: center;
 }
 
-
+.pad-xl{
+  display: none;
+}
 
 .welcome{
   width: 100%;
@@ -65,6 +67,15 @@
     background-repeat: no-repeat;
    
   } 
+
+  .pad-xl{
+    display:unset;
+ }
+
+ .pad-sm{
+    display:none
+ }
+ 
   .welcome {
     width: 100%;
     height: 100%;
