--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -15,7 +15,7 @@
   }
   
   .nav {
-    width: 90%;
+   width: 100%;
     display: flex;
     justify-content: space-around ;
     align-items: center;
@@ -46,7 +46,7 @@
   }
   
   .social-links {
-    width: 320px;
+    width: 30%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -83,6 +83,7 @@
     max-width: 6rem;
     word-break: break-word;
     margin-left: 0.5rem;
+    margin-top:10px
   }
   
 }
