--- a/components/Welcome/Welcome.module.css
+++ b/components/Welcome/Welcome.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 370px;
+height: 100vh;
   width: 100%;
   background: url("../../public/img/hero-sm.svg") center bottom ,
     url("../../public/img/banner-sm.svg") center ;
@@ -20,19 +20,19 @@
   width: 100%;
 }
 
-.right-box {
-  background-image: url("../../public/img/Logo-sm.svg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  align-items: center ;
-  width: 100%;
-  height: 55%;
-  position: relative;
+.welcome-sm{
+ display: flex;
+ flex-direction: column;
+
+ align-items: center;
+ width: 100%;
 }
 
-.right-box h1 {
+.right-box {
+ display: none;
+}
+
+.welcome-sm  h1 {
   color: #3D2B7D;
   font-family: 'Fjalla One';
   font-weight: 300;
@@ -54,12 +54,20 @@
     background-repeat: no-repeat;
    
   } 
+
+  .welcome-sm{
+   height: 190px;
+   }
+
+   .wolfiland-sm{
+     margin-top: 50px;
+   }
 }
 
 @media (min-width: 990px) {
  
   .container {
-    height: 474px;
+    height: 92vh;
     background-image: url("../../public/icons/hero\ 1.svg"),
       url("../../public/img/banner1.svg");
     background-position: center;
@@ -67,6 +75,11 @@
     background-repeat: no-repeat;
    
   } 
+
+
+  .welcome-sm{
+    display: none;
+  }
 
   .pad-xl{
     display:unset;
