--- a/components/AboutMe/AboutMe.module.css
+++ b/components/AboutMe/AboutMe.module.css
@@ -14,6 +14,10 @@
   padding-bottom: 70px;
 }
 
+.separator{
+   width: 320px;
+}
+
 
 .about-me {
   display: flex;
@@ -25,12 +29,23 @@
 .frame {
   display: none !important;
   width: 320px;
+  border:8px solid    #FFE154;
+  box-shadow: -20px 19px 0px 0px rgba(57,31,107,0.75);
+-webkit-box-shadow: -20px 19px 0px 0px rgba(57,31,107,0.75);
+-moz-box-shadow: -20px 19px 0px 0px rgba(57,31,107,0.75);
+margin-bottom: 30px;
+ 
 }
+ 
 
 .frame-sm{
    width: 240px;
    display: flex;
    justify-content: center;
+   box-shadow: -20px 19px 0px 0px rgba(57,31,107,0.75);
+-webkit-box-shadow: -20px 19px 0px 0px rgba(57,31,107,0.75);
+-moz-box-shadow: -20px 19px 0px 0px rgba(57,31,107,0.75);
+margin-bottom: 30px;
 }
 
 .rectangle-xl{
