connect testing contract

--- a/components/ConnectWallet/ConnectWallet.module.css
+++ b/components/ConnectWallet/ConnectWallet.module.css
@@ -1,9 +1,23 @@
+/* Chrome, Safari, Edge, Opera */
+.hide-arrows::-webkit-outer-spin-button,
+.hide-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+  text-align: center;
+}
+
+/* Firefox */
+.hide-arrows {
+  -moz-appearance: textfield;
+  text-align: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .logotype-desc {
