--- a/components/AboutMe/AboutMe.module.css
+++ b/components/AboutMe/AboutMe.module.css
@@ -65,12 +65,21 @@
   width: 70%;
   display: flex;
   justify-content: center;
+
+}
+
+.text-about{
+  width:310px;
+  color: white;
+  
 }
 
 @media (min-width: 620px) {
  
 
- 
+  .text-about{
+    width:420px
+ }
 
   .rectangle {
     width: 500px;
