--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -11,7 +11,7 @@
     justify-content: center;
     position: relative;
     font-family: 'Fjalla One', sans-serif;
-    
+    margin-bottom: -1px;
   }
   
   .nav {
