--- a/components/Wallet/Wallet.module.css
+++ b/components/Wallet/Wallet.module.css
@@ -4,6 +4,7 @@
   grid-gap: 1rem;
   grid-auto-rows: minmax(100px, auto);
   padding: 1rem 0;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
