--- a/components/Collection/Collection.module.css
+++ b/components/Collection/Collection.module.css
@@ -100,19 +100,21 @@
 /* .top-waves {
  
 } */
-
-.top-waves {
-  width: 100%;
-  display: flex;
+.top-waves *{
+  width: 100% !important;
+  display: flex !important;
   margin-bottom: -2px;
 }
 
 .down-waves {
-  transform: rotate(-180deg);
-  margin-top: -2px;
-  width: 100%;
-  display: flex;
+  rotate: 180deg;
 }
+.down-waves * {
+  width: 100% !important;
+  display: flex !important;
+  margin-bottom: -2px;
+}
+
 
 @media (min-width: 990px) {
   .wolfi-collection {
