--- a/components/Mint/Mint.module.css
+++ b/components/Mint/Mint.module.css
@@ -66,7 +66,11 @@
   overflow-x: auto;
 }
 
-.view-wallet {}
+.view-wallet {
+  font-size: 18px;
+  font-weight: 900;
+  color: #ffe154;
+}
 
 @media (max-width: 990px) {
   .view-wallet {
